# rust-template

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  LICENSE.md  README.md  README_WEB.md
.github/workflows/: publish.yml  release.yml  rust.yml
src/: lib.rs  main.rs
