[package]
name = "rust-template"
version = "0.1.0"
authors = ["zaszi <admin@zaszi.net>"]
edition = "2021"
description = "A project template for Rust, helping to structure your projects according to best practices."
documentation = "https://github.com/zaszi/rust-template"
readme = "README.md"
homepage = "https://github.com/zaszi/rust-template"
repository = "https://github.com/zaszi/rust-template"
license-file = "LICENSE"
keywords = ["template", "wasm"]
categories = ["rust-patterns", "wasm"]
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []

[dependencies]
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
wee_alloc = "0.4"

[profile.release]
lto = true
panic = "abort"
